toolchain/logging/elk/kibana/production/eck-kb-prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: es
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    ## resolve 502 BadGateway when using XPACK
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '180'
  name: eck-kb
  namespace: eck
spec:
  rules:
  - host: kb.bobobox.co.id
    http:
      paths:
      - backend:
          serviceName: eck-kb-http
          servicePort: 5601
        path: /
  tls:
  - hosts:
    - kb.bobobox.co.id
    secretName: kb-tls
